# orca4

./: .gitignore  setup.bash  setup.sh
orca_base/: CMakeLists.txt  README.md  package.xml
orca_base/include/orca_base/: base_context.hpp  underwater_motion.hpp
orca_base/scripts/: test_base.py
orca_base/src/: base_controller.cpp  camera_info_publisher.cpp  manager.cpp  odom_to_path_node.cpp  pose_to_path_node.cpp  underwater_motion.cpp
orca_bringup/: CMakeLists.txt  README.md  package.xml
orca_bringup/behavior_trees/: orca4_bt.xml
orca_bringup/cfg/: sim_launch.rviz
orca_bringup/launch/: bringup.py  navigation_launch.py  sim_launch.py
orca_bringup/launch/bluerov2_heavy/: tf.launch.py
orca_bringup/params/: nav2_params.yaml  sim_orca_params.yaml
orca_bringup/scripts/: mission_runner.py
orca_description/: CMakeLists.txt  README.md
orca_description/gazebo/models/orca4/: model.config
orca_description/gazebo/models/sailboat/: model.config  model.sdf
orca_description/gazebo/models/sea_surface/: model.config
orca_description/gazebo/plugins/vacuum_gripper/: CMakeLists.txt  VacuumGripper.cpp  package.xml
orca_description/gazebo/worlds/: sand.world
orca_description/gazebo_plugins/: CMakeLists.txt
orca_description/gazebo_plugins/vacuum_gripper/: VacuumGripper.hpp
orca_description/models/orca4/: model.sdf
orca_description/models/regular_waves/: model.sdf
orca_description/models/sailboat/: model.config  model.sdf
orca_description/models/sea_surface/: model.config  model.sdf
orca_description/scripts/: generate_model.py
orca_description/worlds/: sand.world
orca_description/xacro/bluerov2/: config.xacro  gazebo.xacro  urdf.xacro
orca_description/xacro/bluerov2_heavy/: config.xacro  gazebo.xacro  urdf.xacro
orca_description/xacro/bluerov2_heavy_reach/: config.xacro  gazebo.xacro  urdf.xacro
orca_description/xacro/t200/: urdf.xacro
orca_msgs/: CMakeLists.txt  README.md
orca_nav2/: CMakeLists.txt  README.md  goal_checker_3d_plugin.xml  package.xml  progress_checker_3d_plugin.xml  straight_line_planner_3d_plugin.xml
orca_nav2/include/orca_nav2/: param_macro.hpp
orca_nav2/src/: goal_checker_3d.cpp  progress_checker_3d.cpp  pure_pursuit_controller_3d.cpp  straight_line_planner_3d.cpp
orca_shared/: CMakeLists.txt  package.xml
orca_shared/include/orca_shared/: model.hpp  pwm.hpp  util.hpp
orca_shared/src/: model.cpp  pwm.cpp  util.cpp
