<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>gazebo_vacuum_gripper_plugin</name>
    <version>1.0.0</version>
    <description>The gazebo_vacuum_gripper_plugin package</description>

    <maintainer email="ognjen.cadovski@robbit.rs">Ognjen Cadovski</maintainer>

    <license>GPL-v3</license>

    <url type="repository">https://github.com/Robbit-LLC/orca4</url>

    <author>Ognjen Cadovski</author>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>roscpp</depend>
    <depend>lightsfm</depend>
    <depend>gazebo_ros</depend>

    <export>
        <build_type>ament_cmake</build_type>
        <gazebo_ros plugin_path="${prefix}/../../lib" gazebo_media_path="${prefix}" />
    </export>
</package>